--- a/part1_intro_pandas.ipynb
+++ b/part1_intro_pandas.ipynb
@@ -4945,6 +4945,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student1 = pd.Series({'국어':np.nan, '영어':80, '수학':90})\n",
+    "student2 = pd.Series({'수학':80, '국어':90})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "국어     NaN\n",
+       "영어    80.0\n",
+       "수학    90.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "수학    80\n",
+       "국어    90\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addition =student1+student2\n",
+    "subtraction=student1+student2\n",
+    "multiplication=student1*student2\n",
+    "division=student1/student2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>영어</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>덧셈</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>뺄셈</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>곱셈</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7200.000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>나눗셈</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     국어        수학  영어\n",
+       "덧셈  NaN   170.000 NaN\n",
+       "뺄셈  NaN   170.000 NaN\n",
+       "곱셈  NaN  7200.000 NaN\n",
+       "나눗셈 NaN     1.125 NaN"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = pd.DataFrame([addition, subtraction, multiplication, division],\n",
+    "                      index=['덧셈', '뺄셈', '곱셈', '나눗셈'])\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
