--- a/part1_intro_pandas.ipynb
+++ b/part1_intro_pandas.ipynb
@@ -5434,6 +5434,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "die = \"die\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 148,
    "metadata": {},
    "outputs": [
