--- a/part1_intro_pandas.ipynb
+++ b/part1_intro_pandas.ipynb
@@ -5438,7 +5438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "die = \"die\""
+    "die = \"die\"\n",
+    "ses = \"ses\""
    ]
   },
   {
