--- a/part1_intro_pandas.ipynb
+++ b/part1_intro_pandas.ipynb
@@ -5356,6 +5356,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aaa = \"aaa\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 147,
    "metadata": {},
    "outputs": [
