--- a/part2_data_io.ipynb
+++ b/part2_data_io.ipynb
@@ -1458,7 +1458,7 @@
     "import googlemaps\n",
     "import pandas as pd\n",
     "\n",
-    "my_key = \"AIzaSyCodvWgHgQhV3KEaA_K_hetDwgPDZNTlMU\"\n",
+    "my_key = \"\"\n",
     "\n",
     "maps = googlemaps.Client(key=my_key)\n",
     "\n",
