--- a/part6_applications_of_df.ipynb
+++ b/part6_applications_of_df.ipynb
@@ -5234,6 +5234,421 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              age       fare  survived\n",
+      "class                                 \n",
+      "First   14.802856  78.380373  0.484026\n",
+      "Second  14.001077  13.417399  0.500623\n",
+      "Third   12.495398  11.778142  0.428949\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "titanic = sns.load_dataset('titanic')\n",
+    "df = titanic.loc[:, ['age', 'sex', 'class', 'fare', 'survived']]\n",
+    "\n",
+    "grouped = df.groupby(['class'])\n",
+    "\n",
+    "std_all = grouped.std()\n",
+    "print(std_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "First     78.380373\n",
+       "Second    13.417399\n",
+       "Third     11.778142\n",
+       "Name: fare, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "std_fare = grouped.fare.std()\n",
+    "std_fare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          age      fare  survived\n",
+      "class                            \n",
+      "First   79.08  512.3292         1\n",
+      "Second  69.33   73.5000         1\n",
+      "Third   73.58   69.5500         1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-3-cba0361d844c>:4: FutureWarning: ['sex'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
+      "  agg_minmax = grouped.agg(min_max)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def min_max(x):\n",
+    "    return x.max() - x.min()\n",
+    "\n",
+    "agg_minmax = grouped.agg(min_max)\n",
+    "print(agg_minmax.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         age           sex       fare           survived    \n",
+      "         min   max     min   max  min       max      min max\n",
+      "class                                                       \n",
+      "First   0.92  80.0  female  male  0.0  512.3292        0   1\n",
+      "Second  0.67  70.0  female  male  0.0   73.5000        0   1\n",
+      "Third   0.42  74.0  female  male  0.0   69.5500        0   1\n",
+      "\n",
+      "\n",
+      "       fare                  age\n",
+      "        min       max       mean\n",
+      "class                           \n",
+      "First   0.0  512.3292  38.233441\n",
+      "Second  0.0   73.5000  29.877630\n",
+      "Third   0.0   69.5500  25.140620\n"
+     ]
+    }
+   ],
+   "source": [
+    "agg_all = grouped.agg(['min', 'max'])\n",
+    "print(agg_all.head())\n",
+    "print('\\n')\n",
+    "\n",
+    "agg_sep = grouped.agg({'fare':['min', 'max'], 'age':'mean'})\n",
+    "print(agg_sep.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class\n",
+      "First     38.233441\n",
+      "Second    29.877630\n",
+      "Third     25.140620\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n",
+      "class\n",
+      "First     14.802856\n",
+      "Second    14.001077\n",
+      "Third     12.495398\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n",
+      "* origin : First\n",
+      "1   -0.015770\n",
+      "3   -0.218434\n",
+      "6    1.065103\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n",
+      "* origin : Second\n",
+      "9    -1.134029\n",
+      "15    1.794317\n",
+      "17         NaN\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n",
+      "* origin : Third\n",
+      "0   -0.251342\n",
+      "2    0.068776\n",
+      "4    0.789041\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "age_mean = grouped.age.mean()\n",
+    "print(age_mean)\n",
+    "print('\\n')\n",
+    "\n",
+    "age_std = grouped.age.std()\n",
+    "print(age_std)\n",
+    "print('\\n')\n",
+    "\n",
+    "for key, group in grouped.age:\n",
+    "    group_zscore = (group - age_mean.loc[key])/age_std.loc[key]\n",
+    "    print('* origin :', key)\n",
+    "    print(group_zscore.head(3))\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1   -0.015770\n",
+      "9   -1.134029\n",
+      "0   -0.251342\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n",
+      "891\n",
+      "\n",
+      "\n",
+      "0   -0.251342\n",
+      "1   -0.015770\n",
+      "2    0.068776\n",
+      "3   -0.218434\n",
+      "4    0.789041\n",
+      "5         NaN\n",
+      "6    1.065103\n",
+      "7   -1.851931\n",
+      "8    0.148805\n",
+      "9   -1.134029\n",
+      "Name: age, dtype: float64\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#define z_score\n",
+    "def z_score(x):\n",
+    "    return (x - x.mean()) / x.std()\n",
+    "\n",
+    "\n",
+    "age_zscore = grouped.age.transform(z_score)\n",
+    "print(age_zscore.loc[[1, 9, 0]])\n",
+    "print('\\n')\n",
+    "print(len(age_zscore))\n",
+    "print('\\n')\n",
+    "print(age_zscore.loc[0:9])\n",
+    "print('\\n')\n",
+    "print(type(age_zscore))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    age     sex  class     fare  survived\n",
+      "0  22.0    male  Third   7.2500         0\n",
+      "1  38.0  female  First  71.2833         1\n",
+      "2  26.0  female  Third   7.9250         1\n",
+      "3  35.0  female  First  53.1000         1\n",
+      "4  35.0    male  Third   8.0500         0\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped_filter = grouped.filter(lambda x: len(x) >= 200)\n",
+    "print(grouped_filter.head())\n",
+    "print('\\n')\n",
+    "print(type(grouped_filter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      age     sex   class    fare  survived\n",
+      "884  25.0    male   Third   7.050         0\n",
+      "885  39.0  female   Third  29.125         0\n",
+      "886  27.0    male  Second  13.000         0\n",
+      "888   NaN  female   Third  23.450         0\n",
+      "890  32.0    male   Third   7.750         0\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "age_filter = grouped.filter(lambda x: x.age.mean() < 30)\n",
+    "print(age_filter.tail())\n",
+    "print('\\n')\n",
+    "print(type(age_filter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     age        fare    survived\n",
+      "class                                           \n",
+      "First  count  186.000000  216.000000  216.000000\n",
+      "       mean    38.233441   84.154687    0.629630\n",
+      "       std     14.802856   78.380373    0.484026\n",
+      "       min      0.920000    0.000000    0.000000\n",
+      "       25%     27.000000   30.923950    0.000000\n",
+      "       50%     37.000000   60.287500    1.000000\n",
+      "       75%     49.000000   93.500000    1.000000\n",
+      "       max     80.000000  512.329200    1.000000\n",
+      "Second count  173.000000  184.000000  184.000000\n",
+      "       mean    29.877630   20.662183    0.472826\n",
+      "       std     14.001077   13.417399    0.500623\n",
+      "       min      0.670000    0.000000    0.000000\n",
+      "       25%     23.000000   13.000000    0.000000\n",
+      "       50%     29.000000   14.250000    0.000000\n",
+      "       75%     36.000000   26.000000    1.000000\n",
+      "       max     70.000000   73.500000    1.000000\n",
+      "Third  count  355.000000  491.000000  491.000000\n",
+      "       mean    25.140620   13.675550    0.242363\n",
+      "       std     12.495398   11.778142    0.428949\n",
+      "       min      0.420000    0.000000    0.000000\n",
+      "       25%     18.000000    7.750000    0.000000\n",
+      "       50%     24.000000    8.050000    0.000000\n",
+      "       75%     32.000000   15.500000    0.000000\n",
+      "       max     74.000000   69.550000    1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "agg_grouped = grouped.apply(lambda x: x.describe())\n",
+    "print(agg_grouped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0   -0.251342\n",
+      "1   -0.015770\n",
+      "2    0.068776\n",
+      "3   -0.218434\n",
+      "4    0.789041\n",
+      "Name: age, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "def z_score(x):\n",
+    "    return (x - x.mean()) / x.std()\n",
+    "\n",
+    "age_zscore = grouped.age.apply(z_score)\n",
+    "print(age_zscore.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class\n",
+      "First     False\n",
+      "Second     True\n",
+      "Third      True\n",
+      "dtype: bool\n",
+      "\n",
+      "\n",
+      "     age     sex   class     fare  survived\n",
+      "9   14.0  female  Second  30.0708         1\n",
+      "15  55.0  female  Second  16.0000         1\n",
+      "17   NaN    male  Second  13.0000         1\n",
+      "20  35.0    male  Second  26.0000         0\n",
+      "21  34.0    male  Second  13.0000         1\n",
+      "\n",
+      "\n",
+      "    age     sex  class     fare  survived\n",
+      "0  22.0    male  Third   7.2500         0\n",
+      "2  26.0  female  Third   7.9250         1\n",
+      "4  35.0    male  Third   8.0500         0\n",
+      "5   NaN    male  Third   8.4583         0\n",
+      "7   2.0    male  Third  21.0750         0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "age_filter = grouped.apply(lambda x: x.age.mean() < 30)\n",
+    "print(age_filter)\n",
+    "print('\\n')\n",
+    "for x in age_filter.index:\n",
+    "    if age_filter[x]==True:\n",
+    "        age_filter_df = grouped.get_group(x)\n",
+    "        print(age_filter_df.head())\n",
+    "        print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. 멀티 인덱스"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
