--- a/part7.ipynb
+++ b/part7.ipynb
@@ -2904,6 +2904,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3-2 Support Vector Machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "pd.set_option('display.max_columns', 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdf = df.drop(['deck', 'embark_town'], axis=1)\n",
+    "rdf = rdf.dropna(subset=['age'], how='any', axis=0)\n",
+    "\n",
+    "most_freq = rdf['embarked'].value_counts(dropna=True).idxmax()\n",
+    "rdf['embarked'].fillna(most_freq, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train data size:  (499, 9)\n",
+      "test data size:  (215, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ndf = rdf[['survived', 'pclass', 'sex', 'age', 'sibsp', 'parch', 'embarked']]\n",
+    "\n",
+    "onehot_sex = pd.get_dummies(ndf['sex'])\n",
+    "ndf = pd.concat([ndf, onehot_sex], axis=1)\n",
+    "\n",
+    "onehot_embarked = pd.get_dummies(ndf['embarked'], prefix='town')\n",
+    "ndf = pd.concat([ndf, onehot_embarked], axis=1)\n",
+    "\n",
+    "ndf.drop(['sex', 'embarked'], axis=1, inplace=True)\n",
+    "\n",
+    "X=ndf[['pclass', 'age', 'sibsp', 'parch', 'female', 'male', 'town_C', 'town_Q', 'town_S']]\n",
+    "y=ndf['survived']\n",
+    "\n",
+    "from sklearn import preprocessing\n",
+    "X = preprocessing.StandardScaler().fit(X).transform(X)\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=10)\n",
+    "\n",
+    "print('train data size: ', X_train.shape)\n",
+    "print('test data size: ', X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 0 0 0 1 0 0 0]\n",
+      "[0 0 1 0 0 1 1 1 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SVM model\n",
+    "\n",
+    "from sklearn import svm\n",
+    "\n",
+    "svm_model = svm.SVC(kernel='rbf')\n",
+    "\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "y_hat = svm_model.predict(X_test)\n",
+    "\n",
+    "print(y_hat[0:10])\n",
+    "print(y_test.values[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[120   5]\n",
+      " [ 35  55]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.77      0.96      0.86       125\n",
+      "           1       0.92      0.61      0.73        90\n",
+      "\n",
+      "    accuracy                           0.81       215\n",
+      "   macro avg       0.85      0.79      0.80       215\n",
+      "weighted avg       0.83      0.81      0.81       215\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "svm_matrix = metrics.confusion_matrix(y_test, y_hat)\n",
+    "print(svm_matrix)\n",
+    "\n",
+    "svm_report = metrics.classification_report(y_test, y_hat)\n",
+    "print(svm_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3-3 Decision Tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
