--- a/part7.ipynb
+++ b/part7.ipynb
@@ -5795,10 +5795,541 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>지역</th>\n",
+       "      <th>학교명</th>\n",
+       "      <th>코드</th>\n",
+       "      <th>유형</th>\n",
+       "      <th>...</th>\n",
+       "      <th>경도</th>\n",
+       "      <th>location</th>\n",
+       "      <th>code</th>\n",
+       "      <th>type</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>성북구</td>\n",
+       "      <td>서울대학교사범대학부설중학교...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>국립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>127.038909</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>서울대학교사범대학부설여자중학교...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>국립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>127.003857</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>개원중학교</td>\n",
+       "      <td>3</td>\n",
+       "      <td>공립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>127.071744</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>개포중학교</td>\n",
+       "      <td>3</td>\n",
+       "      <td>공립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>127.062201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>서초구</td>\n",
+       "      <td>경원중학교</td>\n",
+       "      <td>3</td>\n",
+       "      <td>공립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>127.008900</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0    지역                               학교명  코드  유형  ...  \\\n",
+       "0           0  성북구  서울대학교사범대학부설중학교.....       3  국립  ...   \n",
+       "1           1  종로구  서울대학교사범대학부설여자중학교...     3  국립  ...   \n",
+       "2           2  강남구           개원중학교                     3  공립  ...   \n",
+       "3           3  강남구           개포중학교                     3  공립  ...   \n",
+       "4           4  서초구           경원중학교                     3  공립  ...   \n",
+       "\n",
+       "         경도  location  code  type  day  \n",
+       "0  127.038909        16     0     1    0  \n",
+       "1  127.003857        22     0     1    0  \n",
+       "2  127.071744         0     0     0    0  \n",
+       "3  127.062201         0     0     0    0  \n",
+       "4  127.008900        14     0     0    0  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "label_encoder = preprocessing.LabelEncoder()\n",
+    "onehot_encoder = preprocessing.OneHotEncoder()\n",
+    "\n",
+    "onehot_location = label_encoder.fit_transform(df['지역'])\n",
+    "onehot_code = label_encoder.fit_transform(df['코드'])\n",
+    "onehot_type = label_encoder.fit_transform(df['유형'])\n",
+    "onehot_day = label_encoder.fit_transform(df['주야'])\n",
+    "\n",
+    "df['location'] = onehot_location\n",
+    "df['code'] = onehot_code\n",
+    "df['type'] = onehot_type\n",
+    "df['day'] = onehot_day\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   특성화고  과학고  마이스터고\n",
+      "0     0.148   0.018       0.011\n",
+      "1     0.199   0.000       0.000\n",
+      "2     0.047   0.009       0.006\n",
+      "3     0.097   0.013       0.019\n",
+      "4     0.017   0.007       0.000\n",
+      "[-1  0 -1 -1  1  5 -1 -1  2 -1 -1 -1  2  0 -1 -1 -1 -1 -1  2 -1 -1 -1  0\n",
+      "  1  2 -1  1  0  0 -1 -1 -1 -1 -1  0 -1 -1 -1 -1 -1 -1 -1  0 -1 -1 -1  3\n",
+      " -1 -1 -1  3 -1  1 -1 -1  4 -1 -1  4 -1 -1  4  0 -1  5  0  6  1 -1  0  1\n",
+      " -1  0  8 -1 -1 -1  4 -1  3 -1 -1  3  4 -1 -1 -1  3 -1  0  2 -1  0 -1 -1\n",
+      "  5  0  0 -1 -1 -1 -1 -1 -1 -1 -1  0 -1 -1 -1 -1 -1 -1  1 -1 -1 -1  0 -1\n",
+      " -1 -1  5  8  0 -1 -1 -1 -1 -1  7  3  0 -1  5  0  4 -1  5 -1 -1 -1 -1 -1\n",
+      " -1  6 -1 -1 -1  8  4 -1 -1  6 -1 -1 -1 -1 -1  0  6 -1 -1 -1 -1 -1 -1  6\n",
+      " -1 -1  7 -1 -1  6 -1  0  0 -1  3 -1  6  8 -1  6 -1 -1 -1 -1 -1 -1  5  0\n",
+      "  0 -1 -1 -1 -1  0  0 -1  0 -1 -1  6  0 -1 -1 -1 -1 -1  4 -1 -1  3 -1 -1\n",
+      "  0 -1 -1  9 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  0 -1 -1 -1  0 -1 -1 -1  9  0\n",
+      "  9 -1 -1 -1 -1  5  0 -1 -1 -1  0  0 -1  0 -1 -1 -1 -1 -1  0  4 -1 -1  0\n",
+      " -1 -1  0  0 -1 -1  6  3 -1  6 -1 -1 -1  0 -1  0 10 -1  0  0  0 -1  0 -1\n",
+      " -1 -1 -1  9 -1 -1 10  0 10  0  7  7  3  6 -1 -1 -1 -1  3  4 -1  0 -1  8\n",
+      "  4  8  6  0  7 -1 -1 -1 -1  0 -1 -1 -1 -1 -1  0 -1  0  0 -1  0  5  0  0\n",
+      " -1 10  0  0  0  3  0 -1  0 10  2 -1  0 -1 -1  7 -1 -1 -1  0  0 -1 -1 -1\n",
+      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  9  0 -1 -1 -1  0  0 -1  7 -1 -1  0\n",
+      " 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11 11\n",
+      " 11 11 11 11 11 11 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import cluster\n",
+    "\n",
+    "columns_list = [9, 10, 13]\n",
+    "X = df.iloc[:, columns_list]\n",
+    "print(X[:5])\n",
+    "\n",
+    "X = preprocessing.StandardScaler().fit(X).transform(X)\n",
+    "\n",
+    "dbm = cluster.DBSCAN(eps=0.2, min_samples=5)\n",
+    "\n",
+    "dbm.fit(X)\n",
+    "\n",
+    "cluster_label = dbm.labels_\n",
+    "print(cluster_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>지역</th>\n",
+       "      <th>학교명</th>\n",
+       "      <th>코드</th>\n",
+       "      <th>유형</th>\n",
+       "      <th>...</th>\n",
+       "      <th>location</th>\n",
+       "      <th>code</th>\n",
+       "      <th>type</th>\n",
+       "      <th>day</th>\n",
+       "      <th>Cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>성북구</td>\n",
+       "      <td>서울대학교사범대학부설중학교...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>국립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>서울대학교사범대학부설여자중학교...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>국립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>개원중학교</td>\n",
+       "      <td>3</td>\n",
+       "      <td>공립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>개포중학교</td>\n",
+       "      <td>3</td>\n",
+       "      <td>공립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>서초구</td>\n",
+       "      <td>경원중학교</td>\n",
+       "      <td>3</td>\n",
+       "      <td>공립</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0    지역                               학교명  코드  유형  ...  \\\n",
+       "0           0  성북구  서울대학교사범대학부설중학교.....       3  국립  ...   \n",
+       "1           1  종로구  서울대학교사범대학부설여자중학교...     3  국립  ...   \n",
+       "2           2  강남구           개원중학교                     3  공립  ...   \n",
+       "3           3  강남구           개포중학교                     3  공립  ...   \n",
+       "4           4  서초구           경원중학교                     3  공립  ...   \n",
+       "\n",
+       "  location  code  type  day  Cluster  \n",
+       "0       16     0     1    0       -1  \n",
+       "1       22     0     1    0        0  \n",
+       "2        0     0     0    0       -1  \n",
+       "3        0     0     0    0       -1  \n",
+       "4       14     0     0    0        1  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Cluster'] = cluster_label\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cluster Analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* key :  -1\n",
+      "* number : 234\n",
+      "   Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "0           0  성북구     3     0.148   0.018       0.011\n",
+      "2           2  강남구     3     0.047   0.009       0.006\n",
+      "3           3  강남구     3     0.097   0.013       0.019\n",
+      "6           6  강남구     3     0.015   0.015       0.000\n",
+      "7           7  강남구     3     0.000   0.032       0.000\n",
+      "\n",
+      "\n",
+      "* key :  0\n",
+      "* number : 70\n",
+      "    Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "1            1  종로구     3     0.199     0.0         0.0\n",
+      "13          13  서초구     3     0.032     0.0         0.0\n",
+      "23          23  강남구     3     0.025     0.0         0.0\n",
+      "28          28  서초구     3     0.040     0.0         0.0\n",
+      "29          29  강남구     3     0.051     0.0         0.0\n",
+      "\n",
+      "\n",
+      "* key :  1\n",
+      "* number : 7\n",
+      "    Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "4            4  서초구     3     0.017   0.007         0.0\n",
+      "24          24  강남구     3     0.026   0.007         0.0\n",
+      "27          27  강남구     3     0.006   0.006         0.0\n",
+      "53          53  강동구     3     0.020   0.007         0.0\n",
+      "68          68  송파구     3     0.011   0.007         0.0\n",
+      "\n",
+      "\n",
+      "* key :  2\n",
+      "* number : 6\n",
+      "    Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "8            8  강남구     3     0.018   0.013         0.0\n",
+      "12          12  강남구     3     0.000   0.013         0.0\n",
+      "19          19  서초구     3     0.005   0.013         0.0\n",
+      "25          25  서초구     3     0.012   0.012         0.0\n",
+      "91          91  양천구     3     0.028   0.011         0.0\n",
+      "\n",
+      "\n",
+      "* key :  3\n",
+      "* number : 12\n",
+      "    Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "47          47  강동구     3     0.171     0.0       0.005\n",
+      "51          51  송파구     3     0.153     0.0       0.004\n",
+      "80          80  양천구     3     0.189     0.0       0.003\n",
+      "83          83  강서구     3     0.194     0.0       0.004\n",
+      "88          88  강서구     3     0.198     0.0       0.006\n",
+      "\n",
+      "\n",
+      "* key :  4\n",
+      "* number : 11\n",
+      "    Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "56          56  강동구     3     0.094     0.0       0.007\n",
+      "59          59  강동구     3     0.093     0.0       0.004\n",
+      "62          62  강동구     3     0.087     0.0       0.006\n",
+      "78          78  강동구     3     0.112     0.0       0.004\n",
+      "84          84  양천구     3     0.094     0.0       0.003\n",
+      "\n",
+      "\n",
+      "* key :  5\n",
+      "* number : 9\n",
+      "     Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "5             5  강남구     3     0.066   0.007         0.0\n",
+      "65           65  송파구     3     0.081   0.006         0.0\n",
+      "96           96  양천구     3     0.083   0.006         0.0\n",
+      "122         122  구로구     3     0.079   0.004         0.0\n",
+      "134         134  구로구     3     0.063   0.005         0.0\n",
+      "\n",
+      "\n",
+      "* key :  6\n",
+      "* number : 13\n",
+      "     Unnamed: 0      지역  코드  특성화고  과학고  마이스터고\n",
+      "67           67    송파구     3     0.226     0.0       0.004\n",
+      "145         145    구로구     3     0.249     0.0       0.004\n",
+      "153         153  동대문구     3     0.222     0.0       0.004\n",
+      "160         160  동대문구     3     0.225     0.0       0.006\n",
+      "167         167  동대문구     3     0.224     0.0       0.004\n",
+      "\n",
+      "\n",
+      "* key :  7\n",
+      "* number : 7\n",
+      "     Unnamed: 0      지역  코드  특성화고  과학고  마이스터고\n",
+      "130         130    금천구     3     0.329     0.0         0.0\n",
+      "170         170  동대문구     3     0.327     0.0         0.0\n",
+      "298         298    성동구     3     0.323     0.0         0.0\n",
+      "299         299    광진구     3     0.309     0.0         0.0\n",
+      "316         316    강북구     3     0.305     0.0         0.0\n",
+      "\n",
+      "\n",
+      "* key :  8\n",
+      "* number : 6\n",
+      "     Unnamed: 0      지역  코드  특성화고  과학고  마이스터고\n",
+      "74           74    강동구     3     0.215     0.0       0.012\n",
+      "123         123    금천구     3     0.242     0.0       0.013\n",
+      "149         149  동대문구     3     0.213     0.0       0.013\n",
+      "181         181    관악구     3     0.222     0.0       0.013\n",
+      "311         311    성북구     3     0.222     0.0       0.014\n",
+      "\n",
+      "\n",
+      "* key :  9\n",
+      "* number : 5\n",
+      "     Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "219         219  노원구     3     0.110   0.003       0.003\n",
+      "238         238  도봉구     3     0.115   0.003       0.003\n",
+      "240         240  도봉구     3     0.098   0.003       0.003\n",
+      "291         291  성동구     3     0.089   0.003       0.003\n",
+      "372         372  송파구     3     0.098   0.004       0.004\n",
+      "\n",
+      "\n",
+      "* key :  10\n",
+      "* number : 5\n",
+      "     Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "280         280  은평구     3     0.185   0.005       0.005\n",
+      "294         294  성동구     3     0.179   0.005       0.005\n",
+      "296         296  성동구     3     0.180   0.005       0.005\n",
+      "337         337  용산구     3     0.168   0.005       0.005\n",
+      "345         345  용산구     3     0.201   0.005       0.005\n",
+      "\n",
+      "\n",
+      "* key :  11\n",
+      "* number : 30\n",
+      "     Unnamed: 0    지역  코드  특성화고  과학고  마이스터고\n",
+      "384         384  종로구     5       0.0     0.0         0.0\n",
+      "385         385  마포구     5       0.0     0.0         0.0\n",
+      "386         386  종로구     5       0.0     0.0         0.0\n",
+      "387         387  강서구     5       0.0     0.0         0.0\n",
+      "388         388  서초구     5       0.0     0.0         0.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped_cols = [0, 1, 3] + columns_list\n",
+    "grouped = df.groupby('Cluster')\n",
+    "for key, group in grouped:\n",
+    "    print('* key : ', key)\n",
+    "    print('* number :', len(group))\n",
+    "    print(group.iloc[:, grouped_cols].head())\n",
+    "    print('\\n')\n",
+    "    \n",
+    "colors = {-1:'gray', 0:'coral', 1:'blue', 2:'green', 3:'red', 4:'purple', \n",
+    "          5:'orange', 6:'brown', 7:'brick', 8:'yellow', 9:'magenta', 10:'cyan', 11:'tan'}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cluster_map = folium.Map(location=[37.55, 126.98], tiles='Stamen Terrain',\n",
+    "                         zoom_start=12)\n",
+    "\n",
+    "for name, lat, lng, clus in zip(df.학교명, df.위도, df.경도, df.Cluster):\n",
+    "    folium.CircleMarker([lat, lng],\n",
+    "                        radius=5,\n",
+    "                        color=colors[clus],\n",
+    "                        fill=True,\n",
+    "                        fill_color=colors[clus],\n",
+    "                        fill_opacity=0.7,\n",
+    "                        popup=name).add_to(cluster_map)\n",
+    "    \n",
+    "cluster_map.save('./seoul_mschool_cluster.html')"
+   ]
   }
  ],
  "metadata": {
